User-visible changes in version 1.1.2  (2012-04-  ):
* added fitting method "mpfit" -- wrapper around MINPACK-1 based MPFIT library
  (http://www.physics.wisc.edu/~craigm/idl/cmpfit.html)
* added C API to libfityk
* in scripts, backslash (\) at the end of line means line continuation

User-visible changes in version 1.1.1  (2011-09-28):
* option exit_on_warning=0/1 was replaced with on_error=stop/exit; new option
  on_error=nothing allows to ignore errors in script.
* current working directory can be changed using new option `cwd'
* GUI: a new dialog for Model > Export Formula
* minor bug fixes

User-visible changes in version 1.1.0  (2011-07-18):
* embedded Lua (lightweight programming language)
* syntax changes and enhancements in dataset transformations (@n = ...);
  example: "@0 = @0 - 0.23 * @1" removes (background) @1 with y's scaled
  by factor 0.23 from dataset @0; if @0 and @1 have different x's, linear
  interpolation is used.
* added calculation of Polyline derivatives, what enables weighted least
  squares approximation by broken lines
* gzipped fit files can be read directly (extension .fit.gz or .fityk.gz)
* new option max_fitting_time -- stopping criterium based on elapsed time
* GUI: mouse wheel and mouse extra buttons can be used to zoom in/out
* Mac GUI: added Session > New Window that opens new window (open -n Fityk.app)
* GUI: added optional, configurable description in the corner of the main plot
* GUI: Session > Copy to Clipboard works differently and on all platforms now
* GUI: enhanced file dialogs: Data > Quick Load and Session > Save as Image
* fixed all reported bugs

User-visible changes in version 1.0.2  (2011-06-08):
* changed Data > Load File dialog
* fixed a few minor problems and a major one (GUI not working on OSX 10.5)

User-visible changes in version 1.0.1  (2011-03-30):
* corrected calculation of Exponentially Modified Gaussian
* added calculation of confidence intervals