@@ -7,7 +7,7 @@ Prerequisites
 *  Lua >= 5.1
 *  xylib library - http://xylib.sf.net
 *  wxWidgets (wxGTK or wxMSW) >= 2.9.2 (for the GUI)
-*  readline library >= 4.2 (optional, for the CLI)
+*  readline library >= 4.2 or compatible (optional, for the CLI)
 *  gnuplot program (optional, can be used with the CLI)
 
 Installation
