@@ -1,7 +1,9 @@
 User-visible changes in version 1.1.2  (2012-04-  ):
 * added fitting method "mpfit" -- wrapper around MINPACK-1 based MPFIT library
   (http://www.physics.wisc.edu/~craigm/idl/cmpfit.html)
-* added C API to libfityk
+* added C API and Ruby and Java bindings to libfityk
+* Enhanced Python API and added Python equivalent of cfityk (samples/cfityk.py)
+* CLI: cfityk can be linked with libedit (but it works better with readline)
 * in scripts, backslash (\) at the end of line means line continuation
 
 User-visible changes in version 1.1.1  (2011-09-28):
